--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <base href="./"> 
+    <link href="/index.css" type="text/css" rel="stylesheet">
     <title>BiteBuddy</title>
 </head>
 <body>
     <div id="root">Not Renderd</div>
-    <script type="module" src="./src/app.js"></script>
+
+    
+    <script type="module" src="./app.js"></script>
+
 </body>
 </html>
