--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="./"> 
-    <link rel="stylesheet" type="text/css" href="/Index.css" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
     <title>BiteBuddy</title>
 </head>
 <body>
