--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="./"> 
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
     <title>BiteBuddy</title>
 </head>
+
 <body>
     <div id="root">Not Renderd</div>
 
-    
+
     <script type="module" src="./app.js"></script>
 
 </body>
+
 </html>
